[package]
name = "vector-art-program-1"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "*", features = ["macros"] }
parking_lot = { version = "*", features = ["nightly", "serde"] }
raylib = { version = "*", features = ["nalgebra", "nalgebra_interop", "serde", "with_serde", "nightly"] }
